# fichero-printer

./: README.md  pyproject.toml
docs/: PROTOCOL.md
fichero/: __init__.py  cli.py  imaging.py  printer.py
web/: index.html
